fix Booking screen and creat Login.

--- a/Hosee/Hosee/Base.lproj/Main.storyboard
+++ b/Hosee/Hosee/Base.lproj/Main.storyboard
@@ -98,6 +98,14 @@
             </objects>
             <point key="canvasLocation" x="366" y="227"/>
         </scene>
+        <!--Login-->
+        <scene sceneID="4Tr-m6-XQG">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Login" referencedIdentifier="Login" id="wTE-18-eLS" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lDX-7I-mRk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="647" y="359"/>
+        </scene>
         <!--Left Slide View Controller-->
         <scene sceneID="gB2-hI-xFQ">
             <objects>
